--- a/Stats preview card component/index.html
+++ b/Stats preview card component/index.html
@@ -5,12 +5,15 @@
     
     <meta charset="UTF-8">
     <title>Stats preview card component</title>
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
 
 </head>
 
 <body>
-
+<main>
+    
+</main>
 </body>
 
 </html>
