Início da configuração do CSS e inserção da imagem principal

--- a/Stats preview card component/index.html
+++ b/Stats preview card component/index.html
@@ -11,9 +11,15 @@
 </head>
 
 <body>
+    
 <main>
+
+    <p class="texto-principal">Get <span style="color: #a661d1;">insights</span> that help your business grow.</p>
+
+    <img src="images/image-header-desktop.jpg" class="imagem-principal">
     
 </main>
+
 </body>
 
 </html>
