Início da configuração dos textos

--- a/Stats preview card component/index.html
+++ b/Stats preview card component/index.html
@@ -11,13 +11,14 @@
 </head>
 
 <body>
+
+    <img src="images/image-header-desktop.jpg" class="imagem-principal">
     
 <main>
 
     <p class="texto-principal">Get <span style="color: #a661d1;">insights</span> that help your business grow.</p>
-
-    <img src="images/image-header-desktop.jpg" class="imagem-principal">
     
+    <p class="descricao">Discover the benefits of data analytics and make better decisions regarding revenue, customer experience, and overall efficiency.</p>
 </main>
 
 </body>
